Fix 'add' vs 'push' defect and fully implement a non-trivial query